change configurations